samples/_failures_safe/1761078267_28e3f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e88c052e.c: In function ‘main’:
./samples/SAFE/__tmp_e88c052e.c:155:33: error: expected ‘;’ at end of input
  155 |             result.cols = a.rows
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_e88c052e.c:155:13: error: expected declaration or statement at end of input
  155 |             result.cols = a.rows
      |             ^~~~~~
./samples/SAFE/__tmp_e88c052e.c:155:13: error: expected declaration or statement at end of input
